--- a/tubi/cat/BUILD.bazel
+++ b/tubi/cat/BUILD.bazel
@@ -46,3 +46,13 @@ assemble_pip(
     version_file = "//tubi/cat:version.txt",
 )
 
+genrule(
+    name = "lint",
+    srcs = glob(["**/*.py"]),
+    outs = ["lint.log"],
+    cmd_bash = """(
+        $(location //tools/python_lint) --check --verbose $(SRCS)
+        ) | tee $@
+    """,
+    tools = ["//tools/python_lint"],
+)
